# log-reader

./: .gitignore  build.bat  package-lock.json  package.json
.agents/rules/: memory-system.md
.agents/skills/log-reader/: SKILL.md
.agents/skills/react-virtual-scroll/: SKILL.md
.agents/skills/rust-tauri/: SKILL.md
.agents/skills/tauri2/: SKILL.md
.agents/skills/windows-build/: SKILL.md
memory/: decisions.md  preferences.md  project-context.md
sql-log-parser/: build.bat  package-lock.json  package.json
sql-log-parser/src/: App.css  App.tsx
sql-log-parser/src-tauri/: Cargo.toml  build_errors.txt  build_result_final.txt  tauri.conf.json
sql-log-parser/src-tauri/src/: file_reader.rs  lib.rs  main.rs
sql-log-parser/src/components/: StatusBar.tsx  configStore.ts
sql-log-parser/src/features/sql-log-parser/: AliasModal.tsx  FilterModal.tsx  PathModal.tsx  SettingsModal.tsx  SqlFormatterModal.tsx  SqlLogParser.tsx  index.ts  parser.ts  parser.worker.ts  store.ts  useFileOpen.ts  useSqlLogs.ts
sql-log-parser/src/types/: tauri.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  log_reader.rs  main.rs
src/components/: FilterBar.tsx  LogViewer.tsx  StatusBar.tsx
