[package]
name = "log_reader"
version = "0.1.0"
edition = "2021"

[lib]
name = "log_reader_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
notify = "6"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
encoding_rs = "0.8.35"
chardetng = "0.1.17"

[features]
# default enables devtools in debug builds, etc
default = []
